fix buttons not showing up

--- a/midnight/css/base.css
+++ b/midnight/css/base.css
@@ -1588,10 +1588,6 @@ a:hover .foreground-26ym5y {
     padding-right:125px;
 }
 
-.chatContent-a9vAAp:only-child .buttons-3JBrkn {
-    top:0 !important;
-}
-
 .buttons-3JBrkn .buttonContainer-21MN7J,
 .buttons-3JBrkn button {
     width:42px;
